k8s/mm-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-backend-deployment
  labels:
    app: mm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mm-backend
  template:
    metadata:
      labels:
        app: mm-backend
    spec:
      containers:
      - image: money-manager-backend:1.1.0
        imagePullPolicy: IfNotPresent
        name: money-manager-backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mm-backend-service
spec:
  selector:
    app: mm-backend
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081 # Service port accessible from outside
    targetPort: 8080 # Container port
    nodePort: 30000
