k8s/mm-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mm-postgres-deployment
  labels:
    app: mm-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mm-postgres
  template:
    metadata:
      labels:
        app: mm-postgres
    spec:
      containers:
      - image: postgres:16.1
        imagePullPolicy: IfNotPresent
        name: money-manager-postgres
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: mm-postgres-service
spec:
  selector:
    app: mm-postgres
  ports:
    - protocol: TCP
      port: 5432 # Service port accessible from outside
      targetPort: 5432 # Container port
